--- a/Thiago.Todo/ThiagoToDo.Tests/ThiagoToDo.Tests.csproj
+++ b/Thiago.Todo/ThiagoToDo.Tests/ThiagoToDo.Tests.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\TestDbAsyncQueryProvider.cs" />
     <Compile Include="Services\ToDoServiceTest.cs" />
-    <Compile Include="Fixture\MockContext.cs" />
+    <Compile Include="Fixture\MockRepo.cs" />
     <Compile Include="Controllers\ToDoControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
